--- a/config
+++ b/config
@@ -6,5 +6,5 @@
 	symlinks = false
 	ignorecase = true
 [user]
-	email = mohansivakumar
-	name = mohansivakumar359@gmail.com
+	email = mohansivakumar359@gmail.com
+	name = mohansivakumar1994
